# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  frontend-changes.md  mypy.ini  pyproject.toml
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  search_tools.py  vector_store.py
backend/tests/: DIAGNOSIS_REPORT.md  conftest.py  run_diagnostics.py  test_ai_generator.py  test_ai_generator_integration.py  test_api_endpoints.py  test_integration.py  test_live_system.py  test_rag_system.py  test_search_tool_with_real_data.py  test_search_tools.py  test_web_interface_simulation.py  test_with_api_key.py
frontend/: index.html  script.js  style.css  test.html
scripts/: format.sh  lint-with-mypy.sh  lint.sh  quality.sh
